--- a/assets/styles.css
+++ b/assets/styles.css
@@ -67,13 +67,14 @@
       margin-left: 0; }
   
     .one.column,
-    .one.columns                    { margin-top: 4%; margin-left: 4%; width: 4.66666666667%; }
-    .two.columns                    { margin-top: 4%; margin-left: 4%; width: 10%; }
+    .one.columns                    { margin-top: 2%; margin-left: 4%; width: 4.66666666667%; }
+    .two.columns                    { margin-top: 2%; margin-left: 4%; width: 10%; }
     .three.columns                  { width: 22%;            }
     .four.columns                   { width: 30.6666666667%; }
     .five.columns                   { width: 39.3333333333%; }
     .six.columns                    { width: 48%;            }
-    .seven.columns                  { margin-top: 4%; margin-left:0; width: 56.6666666667% }
+    .seven.columns                  { margin-top: 2%; margin-left:0; width: 56.6666666667% }
+    .sevend.columns                  { margin-top: 2%; margin-left: 4%; width: 56.6666666667% }
     .eight.columns                  { width: 65.3333333333%; }
     .nine.columns                   { width: 74.0%;          }
     .ten.columns                    { width: 82.6666666667%; }
